Items cargados con problema

--- a/src/index.css
+++ b/src/index.css
@@ -1,7 +1,7 @@
 :root {
   font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
   line-height: 1.5;
-  font-weight: 400;
+  font-weight: 00;
 
   color-scheme: light dark;
   color: rgba(255, 255, 255, 0.87);
@@ -37,19 +37,22 @@ h1 {
 }
 
 button {
-  border-radius: 8px;
-  border: 1px solid transparent;
+  border-radius: 20px;
   padding: 0.6em 1.2em;
   font-size: 1em;
   font-weight: 500;
   font-family: inherit;
   background-color: #1a1a1a;
   cursor: pointer;
-  transition: border-color 0.25s;
+  transition: .1s;
+  margin: 05px;
 }
 button:hover {
-  border-color: #646cff;
-}
+  border-color: hsl(0, 80%, 15%);
+  border-width: 5px;
+  font-size: 105%;
+  font-weight: bold;
+  }
 button:focus,
 button:focus-visible {
   outline: 4px auto -webkit-focus-ring-color;
@@ -66,4 +69,8 @@ button:focus-visible {
   button {
     background-color: #f9f9f9;
   }
+}
+
+carrito {
+  background-color: #535bf2;
 }
