--- a/src/App.css
+++ b/src/App.css
@@ -1,9 +1,9 @@
 #root {
-  max-width: 1280px;
-  margin: 0 auto;
-  padding: 2rem;
-  text-align: center;
-  background-color: black;
+    max-width: 1280px;
+    margin: 0 auto;
+    padding: 4rem;
+    text-align: center;
+    background-color: rgb(22, 22, 70);
 }
 
 .logo {
@@ -42,9 +42,9 @@
   color: #888;
 }
 
-.react{
+/* .react{
   height: 250px;
-  }
+  } */
 
   .app{
     color: white;
