--- a/src/index.css
+++ b/src/index.css
@@ -60,7 +60,7 @@ button:focus-visible {
 
 @media (prefers-color-scheme: light) {
   :root {
-    color: #213547;
+    color: #dee1e4;
     background-color: #ffffff;
   }
   a:hover {
